--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UmrahPackages">
-
-        </activity>
+        <activity android:name=".UmrahPackages" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".ListViewActivity" />
+        <activity android:name=".SearchActivity"></activity>
     </application>
 
 </manifest>
